remove redundant folders/files, customise mypham page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,26 +2,11 @@ project:
   type: website
   output-dir: "docs"
 website:
-  title: "AllôPoto"
+  title: "Xách tay Pháp Đức Bỉ"
   navbar:
     left: 
-      - text: Khóa học online
-        href: courses.qmd
-      - text: Khóa học video
-        href: courses-video.qmd
-      - text: Review
-        href: feedback.qmd 
-    right:
-      - icon: whatsapp
-        href: https://wa.me/33744192752
-      - icon: instagram
-        href: https://www.instagram.com/allopoto.be/
-      - icon: instagram
-        href: https://www.instagram.com/coucoutintin.be/
-      - icon: envelope
-        href: mailto:allopoto.be@gmail.com
-      - icon: facebook
-        href: https://facebook.com/allopoto.vn
+      - text: Mỹ phẩm
+        href: mypham.qmd
 format:
   html:
     theme:
