add nuoc hoa page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,8 @@ website:
     left: 
       - text: Mỹ phẩm
         href: mypham.qmd
+      - text: Nước hoa
+        href: nuochoa.qmd
 format:
   html:
     theme:
