prepare for the first deploy

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,10 @@ website:
         href: mypham.qmd
       - text: Nước hoa
         href: nuochoa.qmd
+      - text: Túi xách
+        href: tuixach.qmd
+      - text: Đồ em bé
+        href: embe.qmd
 format:
   html:
     theme:
