update background color

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
   output-dir: "docs"
 website:
-  title: "Xách tay Pháp Đức Bỉ"
+  title: "Xách tay Đức Pháp Bỉ"
   navbar:
     left: 
       - text: Mỹ phẩm
